# mp2-lab4-cluster

./: .gitignore  CMakeLists.txt
include/: cluster.h  processor.h  queue.h  statistics.h  task.h  tasks_stream_simulator.h
samples/: CMakeLists.txt  sample.cpp
scripts/: build_debug.bat  build_release.bat
src/: cluster.cpp  processor.cpp  statistics.cpp  task.cpp  tasks_stream_simulator.cpp
tests/: CMakeLists.txt
tests/test_cluster/: CMakeLists.txt  test_cluster.cpp
tests/test_processor/: CMakeLists.txt  test_processor.cpp
tests/test_queue/: CMakeLists.txt  test_queue.cpp
tests/test_task/: CMakeLists.txt  test_task.cpp
